backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-backend
spec:
  selector:
    matchLabels:
      app: nmlt
  replicas: 1
  template:
    metadata:
      labels:
        app: nmlt
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
        ports:
        - containerPort: 8080
          name: mt-http
