daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: multitool
spec:
  selector:
    matchLabels:
      name: multitool
  template:
    metadata:
      labels:
        name: multitool
    spec:
      volumes:
      - name: host
        hostPath:
          path: /var/log # на устройстве
      containers:
      - name: multitool
        image: wbitt/network-multitool
        args:
          - /bin/sh
          - -c 
          - sleep infinity
        volumeMounts:
          - name: host
            mountPath: /test/log # в поде
