deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-multi
spec:
  selector:
    matchLabels:
      app: busybox
  replicas: 1
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        command: ['sh', '-c', 'tail -f /multitool/log/test.txt']
        volumeMounts:
          - name: data
            mountPath: /multitool

      - name: busybox
        image: busybox:1.37
        command: ['sh', '-c', 'mkdir /busybox/log && while true; do echo "$(date) - busybox-multitool" >> /busybox/log/test.txt; sleep 5; done']
        volumeMounts:
          - name: data
            mountPath: /busybox
        ports:
        - containerPort: 80
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: task-pv-claim
