inideploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  selector:
    matchLabels:
      app: nmlt
  replicas: 3
  template:
    metadata:
      labels:
        app: nmlt
    spec:
      containers:
      - name: myapp-container
        image: busybox:1.37
        command: ['sh', '-c', 'echo The app is running! && sleep 3600']
