nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.27
        ports:
          - containerPort: 80
            name: http-port
          - containerPort: 443
            name: https-port
        volumeMounts:
            - name: nginx-www
              mountPath: /usr/share/nginx/html/ # в поде
      volumes:
      - name: nginx-www
        configMap:
          name: my-app
