ext_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-mlt-nodeport-svc
spec:
  selector:
    app: nmlt
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      nodePort: 30080
    - protocol: TCP
      name: multitool
      port: 8080
      nodePort: 30081
  type: NodePort
