service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-api-svc
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      targetPort: 80
  type: NodePort
