service-hello.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-svc
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      targetPort: 80
  type: NodePort
