service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nmlt
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      targetPort: 80 
    - protocol: TCP
      name: multitool
      port: 81
      targetPort: 81
